src/bindings.rs

extern "C" {
    pub fn mir_sdr_SetDcTrackTime(trackTime: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetSyncUpdateSampleNum(sampleNum: ::std::os::raw::c_uint) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetSyncUpdatePeriod(period: ::std::os::raw::c_uint) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_ApiVersion(version: *mut f32) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_ResetUpdateFlags(
        resetGainUpdate: ::std::os::raw::c_int,
        resetRfUpdate: ::std::os::raw::c_int,
        resetFsUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetTransferMode(mode: mir_sdr_TransferModeT) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_DownConvert(
        in_: *mut ::std::os::raw::c_short,
        xi: *mut ::std::os::raw::c_short,
        xq: *mut ::std::os::raw::c_short,
        samplesPerPacket: ::std::os::raw::c_uint,
        ifType: mir_sdr_If_kHzT,
        M: ::std::os::raw::c_uint,
        preReset: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetParam(
        id: ::std::os::raw::c_uint,
        value: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetPpm(ppm: f64) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetLoMode(loMode: mir_sdr_LoModeT) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetGrAltMode(
        gRidx: *mut ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_DCoffsetIQimbalanceControl(
        DCenable: ::std::os::raw::c_uint,
        IQenable: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_DecimateControl(
        enable: ::std::os::raw::c_uint,
        decimationFactor: ::std::os::raw::c_uint,
        wideBandSignal: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_AgcControl(
        enable: mir_sdr_AgcControlT,
        setPoint_dBfs: ::std::os::raw::c_int,
        knee_dBfs: ::std::os::raw::c_int,
        decay_ms: ::std::os::raw::c_uint,
        hang_ms: ::std::os::raw::c_uint,
        syncUpdate: ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_StreamInit(
        gRdB: *mut ::std::os::raw::c_int,
        fsMHz: f64,
        rfMHz: f64,
        bwType: mir_sdr_Bw_MHzT,
        ifType: mir_sdr_If_kHzT,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        setGrMode: mir_sdr_SetGrModeT,
        samplesPerPacket: *mut ::std::os::raw::c_int,
        StreamCbFn: mir_sdr_StreamCallback_t,
        GainChangeCbFn: mir_sdr_GainChangeCallback_t,
        cbContext: *mut ::std::os::raw::c_void,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_StreamUninit() -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_Reinit(
        gRdB: *mut ::std::os::raw::c_int,
        fsMHz: f64,
        rfMHz: f64,
        bwType: mir_sdr_Bw_MHzT,
        ifType: mir_sdr_If_kHzT,
        loMode: mir_sdr_LoModeT,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        setGrMode: mir_sdr_SetGrModeT,
        samplesPerPacket: *mut ::std::os::raw::c_int,
        reasonForReinit: mir_sdr_ReasonForReinitT,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_GetGrByFreq(
        rfMHz: f64,
        band: *mut mir_sdr_BandT,
        gRdB: *mut ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        setGrMode: mir_sdr_SetGrModeT,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_DebugEnable(enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_GetCurrentGain(gainVals: *mut mir_sdr_GainValuesT) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_GainChangeCallbackMessageReceived() -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_GetDevices(
        devices: *mut mir_sdr_DeviceT,
        numDevs: *mut ::std::os::raw::c_uint,
        maxDevs: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetDeviceIdx(idx: ::std::os::raw::c_uint) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_ReleaseDeviceIdx() -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_GetHwVersion(ver: *mut ::std::os::raw::c_uchar) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_RSPII_AntennaControl(select: mir_sdr_RSPII_AntennaSelectT) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_RSPII_ExternalReferenceControl(
        output_enable: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_RSPII_BiasTControl(enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_RSPII_RfNotchEnable(enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_RSP_SetGr(
        gRdB: ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_RSP_SetGrLimits(minGr: mir_sdr_MinGainReductionT) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_AmPortSelect(port: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rsp1a_BiasT(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rsp1a_DabNotch(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rsp1a_BroadcastNotch(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rspDuo_TunerSel(sel: mir_sdr_rspDuo_TunerSelT) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rspDuo_ExtRef(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rspDuo_BiasT(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rspDuo_Tuner1AmNotch(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rspDuo_BroadcastNotch(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_rspDuo_DabNotch(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT;
}
